// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxtros6 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxtros6or94y--size-sm {
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
}

.sxtros6-898e9 {
  margin-left: var(--sx-space-3);
}

.sx03kze-e0n2q {
  opacity: 0;
  transition: opacity 150ms;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-c4y3k {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms;
}

.sxe5oww {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: var(--sx-radii-round);
}

.sxe5oww:nth-child(1) {
  animation-delay: -300ms;
}

.sxe5oww:nth-child(2) {
  animation-delay: -150ms;
}

.sxe5oww:nth-child(3) {
  animation-delay: 0;
}

.sxe5oww4btw3--size-md {
  height: 6px;
  width: 6px;
  margin-left: 2px;
  margin-right: 2px;
}

.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixlmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxl0mixh1fyd--isLoading-true {
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-solid sxl0mixdwxsw--size-md sxl0mixh1fyd--isLoading-true sxl0mixhon8l--c2"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53-c4y3k"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kze-e0n2q"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-solid sxl0mixdwxsw--size-md sxl0mixhon8l--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
.sxtros6 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxtros6or94y--size-sm {
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
}

.sxtros6-898e9 {
  margin-left: var(--sx-space-3);
}

.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-solid sxl0mixdwxsw--size-md sxl0mixhon8l--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxtros6 sxtros6or94y--size-sm sxtros6-898e9"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-solid sxl0mixdwxsw--size-md sxl0mixhon8l--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-warning sxl0mix03kze--appearance-outline sxl0mixdwxsw--size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-outline sxl0mixdwxsw--size-md sxl0mixuj78t--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
.sxtros6 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxtros6or94y--size-sm {
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
}

.sxtros6-898e9 {
  margin-left: var(--sx-space-3);
}

.sxl0mix {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  letter-spacing: 0.02em;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxl0mix[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxl0mixdwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxl0mixlmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxl0mixhon8l--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxl0mixhon8l--c2:not([disabled]):hover,
.sxl0mixhon8l--c2:not([disabled]):focus {
  background: var(--sx-colors-tertiary);
}

.sxl0mixhon8l--c2:active {
  background: var(--sx-colors-primary);
}

.sxl0mixhon8l--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxl0mixuj78t--c2 {
  box-shadow: inset 0 0 0 1px;
  color: var(--sx-colors-primary);
  background: white;
}

.sxl0mixuj78t--c2:not([disabled]):hover,
.sxl0mixuj78t--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-tertiary);
  background: white;
}

.sxl0mixuj78t--c2:active {
  color: var(--sx-colors-primary);
}

.sxl0mixuj78t--c2[disabled] {
  background: white;
  color: var(--sx-colors-tertiary);
}

<div>
  <button
    class="sxl0mix sxl0mix03kze--theme-primary sxl0mix03kze--appearance-solid sxl0mixdwxsw--size-md sxl0mixlmkcj--isRounded-true sxl0mixhon8l--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxtros6 sxtros6or94y--size-sm sxtros6-898e9"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
